--- a/public/css/preloader.css
+++ b/public/css/preloader.css
@@ -4,6 +4,8 @@
   width: 100%;
   height: 100%;
   background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -12,6 +14,8 @@
 
 .preloader .preload-elements {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   justify-content: center;
