--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -1,21 +1,24 @@
 @import 'variables';
 
-.btn{
+.btn {
     padding: 14px 16px;
     cursor: pointer;
     transition: all .2s ease-in;
-    span, &::after{
+
+    span,
+    &::after {
         position: relative;
         z-index: 2;
     }
 }
 
-.btn-style-first{
-    span{
+.btn-style-first {
+    span {
         color: var(--black);
         font-family: $impact_font;
         font-size: 18px;
     }
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,7 +28,8 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
-    &::after{
+
+    &::after {
         content: '';
         background: url('/storage/source/logo/btn-logo.svg');
         background-size: 26px;
@@ -33,7 +37,8 @@
         width: 26px;
         height: 26px;
     }
-    &::before{
+
+    &::before {
         content: '';
         position: absolute;
         top: -50px;
@@ -45,29 +50,33 @@
         transition: all .2s ease-in;
         z-index: 1;
     }
-    &:hover{
-        span{
+
+    &:hover {
+        span {
             color: var(--lemon);
         }
-        &::before{
+
+        &::before {
             transform: translateX(100%);
         }
     }
 }
 
-.btn-style-black-type{
+.btn-style-black-type {
     background-color: var(--black);
     display: flex;
     align-items: center;
     gap: 16px;
     width: fit-content;
     transition: all .2s ease-in;
-    span{
+
+    span {
         color: var(--white);
         font-family: $impact_font;
         font-size: 24px;
     }
-    &::after{
+
+    &::after {
         content: '';
         background: url('/storage/source/logo/btn-yellow.svg');
         background-size: 26px;
@@ -75,24 +84,27 @@
         width: 26px;
         height: 26px;
     }
-    &:hover{
+
+    &:hover {
         background-color: var(--red);
     }
 }
 
-.btn-style-type-2{
+.btn-style-type-2 {
     background-color: var(--lemon);
     display: flex;
     align-items: center;
     gap: 16px;
     width: fit-content;
     transition: all .2s ease-in;
-    span{
+
+    span {
         color: var(--black);
         font-family: $impact_font;
         font-size: 24px;
     }
-    &::after{
+
+    &::after {
         content: '';
         background: url('/storage/source/logo/btn-logo.svg') no-repeat;
         background-size: 26px;
@@ -100,14 +112,60 @@
         width: 26px;
         height: 26px;
     }
-    &:hover{
+
+    &:hover {
         background-color: var(--red);
-        span{
+
+        span {
             color: var(--white);
         }
-        &::after{
+
+        &::after {
             background: url('/storage/source/logo/btn-yellow.svg') no-repeat;
             background-size: 26px;
         }
+    }
+}
+
+.padding-box{
+    padding: 25px 15px;
+}
+
+.breadcrumbs {
+    font-size: 0.9rem;
+    font-family: sans-serif;
+
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+
+        &:not(:last-child)::after {
+            content: "/";
+            margin: 0 0.5rem;
+            color: #999;
+        }
+    }
+
+    &__link {
+        text-decoration: none;
+        color: var(--red);
+        transition: color 0.2s ease;
+
+        &:hover {
+            color: #0056b3;
+        }
+    }
+
+    &__current {
+        color: #6c757d;
+        cursor: default;
     }
 }
